--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!-- wallets -->
     <div class="wallets" id="wallets">
         <h1 class="home">Wallets</h1>
-        <p>Multiple iOS and Android wallets support the WalletConnect protocol. Interaction between mobile apps and mobile browsers are supported via mobile deep linking.</p>
+        <p>Testing changes made to deploy Multiple iOS and Android wallets support the WalletConnect protocol. Interaction between mobile apps and mobile browsers are supported via mobile deep linking.</p>
 
         </br>
         <div class="all">
